# autoconf-libtemplate

./: .gitignore  configure.ac
src/: Makefile.am
